<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".Activitys.ParametrosActivity">


    <LinearLayout
        android:id="@+id/Linearlayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Linearlayout02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codigo_vendedor" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_desconto" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/Linearlayout03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TxtCodigoVendedor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:textSize="@dimen/tamanho_texto_edittext" />


            <EditText
                android:id="@+id/TxtDesconto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:textSize="@dimen/tamanho_texto_edittext" />


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endremoto" />

        <EditText
            android:id="@+id/TxtUrlBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanho_texto_edittext" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endlocal" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblServidor" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblImporCliente" />

        <RadioGroup
            android:id="@+id/RgImportarTodosClientes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/RbSim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rbSim"
                android:textSize="10dp" />


            <RadioButton
                android:id="@+id/RbNao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/rbNao"
                android:textSize="10dp" />
        </RadioGroup>


        <CheckBox
            android:id="@+id/CkEstoqueNegativo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ckEstoqueNegativo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/btnSalvarParametro" />

            <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/btnreset" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>
